Corrected Save Attachments styles (fixed alignments (old version wasn't supported by the needed browsers))

--- a/webapp/src/main/webapp/skin/outlook.css
+++ b/webapp/src/main/webapp/skin/outlook.css
@@ -207,15 +207,7 @@ span[disabled] {
 }
 
 #outlook-saveAttachment fieldset {
-  min-inline-size: 95%;
-}
-
-#outlook-saveAttachment .ms-Grid-col {
-  padding: 0px;
-}
-
-#outlook-saveAttachment {
-  padding: 0px;
+  min-width: initial;
 }
 
 .selectableItem:hover {
